[gd_scene load_steps=31 format=3 uid="uid://bq8l1bc4p2jfv"]

[ext_resource type="Script" path="res://characters/player.gd" id="1_5whsx"]
[ext_resource type="Texture2D" uid="uid://d3bw4lqwj6bnq" path="res://assets/NinjaAdventure/Actor/Characters/DarkNinja/SpriteSheet.png" id="1_nxgum"]
[ext_resource type="Script" path="res://weapons/AutoAim.gd" id="3_fsh82"]
[ext_resource type="Texture2D" uid="uid://cch0d1pomswr7" path="res://assets/NinjaAdventure/HUD/Shuriken.png" id="4_s8qkm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6lqyr"]
size = Vector2(15, 15)

[sub_resource type="Animation" id="Animation_66wcm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_vcjpv"]
resource_name = "idle_down"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_nxf6u"]
resource_name = "idle_left"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_lriqh"]
resource_name = "idle_right"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_4igj4"]
resource_name = "idle_up"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_t7e2y"]
resource_name = "walk_down"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 4, 8, 12]
}

[sub_resource type="Animation" id="Animation_5vlxo"]
resource_name = "walk_left"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 6, 10, 14]
}

[sub_resource type="Animation" id="Animation_ffgi3"]
resource_name = "walk_right"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 7, 11, 15]
}

[sub_resource type="Animation" id="Animation_0t77r"]
resource_name = "walk_up"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 5, 9, 13]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mqbjk"]
_data = {
"RESET": SubResource("Animation_66wcm"),
"idle_down": SubResource("Animation_vcjpv"),
"idle_left": SubResource("Animation_nxf6u"),
"idle_right": SubResource("Animation_lriqh"),
"idle_up": SubResource("Animation_4igj4"),
"walk_down": SubResource("Animation_t7e2y"),
"walk_left": SubResource("Animation_5vlxo"),
"walk_right": SubResource("Animation_ffgi3"),
"walk_up": SubResource("Animation_0t77r")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rp763"]
animation = &"idle_left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_i1akq"]
animation = &"idle_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_b43a8"]
animation = &"idle_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ppnq8"]
animation = &"idle_up"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_ii4f6"]
blend_point_0/node = SubResource("AnimationNodeAnimation_rp763")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_i1akq")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_b43a8")
blend_point_2/pos = Vector2(0, 1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_ppnq8")
blend_point_3/pos = Vector2(0, -1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gv5hi"]
animation = &"walk_down"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nyd01"]
animation = &"walk_up"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6wmkf"]
animation = &"walk_right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vy112"]
animation = &"walk_left"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_dl1vb"]
blend_point_0/node = SubResource("AnimationNodeAnimation_gv5hi")
blend_point_0/pos = Vector2(0, 1.1)
blend_point_1/node = SubResource("AnimationNodeAnimation_nyd01")
blend_point_1/pos = Vector2(0, -1.1)
blend_point_2/node = SubResource("AnimationNodeAnimation_6wmkf")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_vy112")
blend_point_3/pos = Vector2(-1, 0)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oo3fr"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_135u0"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_idoma"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_oesvi"]
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_ii4f6")
states/Idle/position = Vector2(385, 91)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_dl1vb")
states/Walk/position = Vector2(615.5, 98.125)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_oo3fr"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_135u0"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_idoma")]

[sub_resource type="CircleShape2D" id="CircleShape2D_ur5uf"]
radius = 95.1315

[node name="Player" type="CharacterBody2D"]
collision_mask = 2
motion_mode = 1
script = ExtResource("1_5whsx")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_nxgum")
hframes = 4
vframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_6lqyr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mqbjk")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mqbjk")
}
tree_root = SubResource("AnimationNodeStateMachine_oesvi")
advance_expression_base_node = NodePath("")
anim_player = NodePath("../AnimationPlayer")
parameters/Idle/blend_position = Vector2(-0.00965667, -0.22193)
parameters/Walk/blend_position = Vector2(2.08165e-12, 2.08165e-12)

[node name="AutoAim" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2
script = ExtResource("3_fsh82")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AutoAim"]
shape = SubResource("CircleShape2D_ur5uf")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="ShootingPivot" type="Marker2D" parent="."]
unique_name_in_owner = true

[node name="Sprite2D" type="Sprite2D" parent="ShootingPivot"]
visible = false
position = Vector2(16, 0)
texture = ExtResource("4_s8qkm")

[node name="ShootingPoint" type="Marker2D" parent="ShootingPivot/Sprite2D"]
unique_name_in_owner = true

[connection signal="timeout" from="Timer" to="AutoAim" method="_on_timer_timeout"]
